--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>react-stylish-gallery</title>
+    <title>Production</title>
   </head>
   <body>
-  <script type="text/javascript" src="dist/main.bundle.js"></script></body>
+  <script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
