--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Production</title>
+    <title>react-stylish-gallery</title>
   </head>
   <body>
   <script type="text/javascript" src="main.bundle.js"></script></body>
