--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     <title>react-stylish-gallery</title>
   </head>
   <body>
-  <script type="text/javascript" src="main.bundle.js"></script></body>
+  <script type="text/javascript" src="main.bundle.js"></script>
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106758489-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-106758489-1');
+  </script>
+  </body>
 </html>
