Google analytics fixed2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>react-stylish-gallery</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106758489-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106758489-1');
+    </script>
   </head>
   <body>
   <script type="text/javascript" src="main.bundle.js"></script></body>
